@@ -1,3 +1,3 @@
 EXTRA_DIST=OBJECTFILES
 noinst_LIBRARIES=libuserbase.a
-libuserbase_a_SOURCES=mysqlsimplepdns.cc mysqlsimplepdns.hh
+libuserbase_a_SOURCES=mysqlsimplepdns.cc mysqlsimplepdns.hh ../../smysql.cc
