@@ -1,5 +1,8 @@
-Changes since 1.3:
-
+Changes since 1.4:
+        - added LDAP support
+	- pplistener ignored config-dir (stef)
+	- all threads share one cwd (oops)
+	
 Changes since 1.2:
 	- improved some logging
 	- added length output to RETR (thanks Peter van Dijk)
